# zadavalnik

./: .gitignore  README.md  pyproject.toml  test.py  vpython  zadavainik_logs.db  zadavalnik.db
src/zadavalnik/: main.py  run.py
src/zadavalnik/ai/: openai_client copy.py  openai_client.py
src/zadavalnik/bot/: bot.py  handlers.py  states.py
src/zadavalnik/config/: settings.py
src/zadavalnik/database/: db.py  models.py
