[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zadavalnik"
version = "0.0.1"
description = "Questioning bot"
authors = [
    { name = "Anton Lobachev", email = "anvlobachev@gmail.com" },
    { name = "Polina Serebrennikova", email = "pennysilv@gmail.com" }
]
# license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]==20.0,
    "openai>=1.3.0",
    "sqlalchemy[asyncio]>=1.4.0,<2.1.0",
    "aiosqlite>=0.17.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}


[project.urls]
# Homepage = "https://github.com/username/my_package"
# Documentation = "https://github.com/username/my_package#readme"
# Issues = "https://github.com/username/my_package/issues"

# [tool.setuptools_scm]
# write_to = "my_package/_version.py"